# mallory

./: README.md
cov-server/: Cargo.toml  Coverage.toml  Rocket.toml
cov-server/src/: main.rs  net_util.rs  raw_packet.rs
docker/: .dockerignore  README.md  Vagrantfile
docker/control/: Dockerfile  bashrc  init.sh
docker/node/: Dockerfile  charybdefs.service  run-charybdefs.sh  setup-jepsen.sh  setup-networking.sh
docker/template/: control-net-join.yml  db.yml  docker-compose.yml  net.yml
instrumentor/: .gitignore  tell_instr_targets.py
instrumentor/llvm_mode/: Makefile
instrumentor/llvm_mode/clear-shm/: init_shm  init_shm.c
instrumentor/llvm_mode/include/: config.h  types.h
instrumentor/llvm_mode/rustc-demangle/: Cargo.toml
instrumentor/llvm_mode/src/: afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
instrumentor/llvm_mode/test/: test-instr.c
jepsen/: project.clj
jepsen/src/jepsen/: cli.clj  control.clj  core.clj  net.clj  util.clj
jepsen/src/jepsen/control/: core.clj
jepsen/src/jepsen/generator/: interpreter.clj
jepsen/src/jepsen/mediator/: wrapper.clj
jepsen/src/jepsen/nemesis/: combined.clj  membership.clj
jepsen/src/jepsen/net/: proto.clj
mediator/: Cargo.toml  Mediator.toml  README.md  Rocket.toml
mediator/src/: event.rs  main.rs
mediator/src/feedback/: mod.rs  reward.rs  summary.rs
mediator/src/feedback/producers/: afl.rs  eventcount.rs  eventhistory.rs  mod.rs  vectorclock.rs
mediator/src/history/: common.rs  mod.rs  packets.rs  time.rs  timeline.rs
mediator/src/nemesis/: mod.rs
mediator/src/nemesis/interfaces/: jepsen.rs  mod.rs
mediator/src/nemesis/schedules/: mod.rs  noop.rs  power.rs
mediator/src/nemesis/schedules/qlearning/: agent.rs  mod.rs  policies.rs  states.rs
mediator/src/net/: firewall.rs  mod.rs  packet.rs  util.rs
tests/jepsen/braft/: README.md  project.clj
tests/jepsen/dqlite/: .gitignore  CHANGELOG.md  README.md  project.clj
tests/jepsen/dqlite/doc/: intro.md
tests/jepsen/dqlite/resources/: app.go  network.sh
tests/jepsen/mongodb/: CHANGELOG.md  project.clj
tests/jepsen/mongodb/db-build/: build.sh
tests/jepsen/mongodb/doc/: intro.md
tests/jepsen/mongodb/resources/: mongod.conf
tests/jepsen/redisraft/: .gitignore  README.md  project.clj
tests/jepsen/scripts/: analysis_branch.sh  analysis_events.sh  execute_all.sh  generate_branch_plot.py  generate_event_plot.py
tests/jepsen/scylladb/: .gitignore  README.md  project.clj
tests/jepsen/scylladb/db-build/: build.sh  install.sh
tests/jepsen/scylladb/doc/: intro.md
tests/jepsen/tikv/: README.md  project.clj  rpc-server
tests/jepsen/tikv/client-rust-server/: Cargo.toml
tests/jepsen/tikv/client-rust-server/src/: raw.rs
tests/jepsen/tikv/doc/: intro.md
tests/jepsen/tikv/proto/: rawkv.proto  txnkv.proto
tests/jepsen/tikv/scripts/: destroy-nodes.sh  setup-network.sh  setup-nodes.sh  setup-tester.sh  start-nodes.sh
tests/mallory/braft/: project.clj
tests/mallory/braft/resources/: jepsen_control.sh
tests/mallory/dqlite/: go.mod  go.sum  project.clj  test.sh
tests/mallory/mongodb/: README.md  project.clj
tests/mallory/mongodb/db-build/: install.sh
tests/mallory/mongodb/resources/: mongos.conf
tests/mallory/redisraft/: CHANGELOG.md  project.clj
tests/mallory/redisraft/doc/: intro.md
tests/mallory/scripts/: analysis_branch.sh  analysis_events.sh  execute_all.sh
tests/mallory/scylladb/: project.clj
tests/mallory/scylladb/resources/: scylla.yaml
tests/mallory/tikv/: CHANGELOG.md  Makefile  project.clj
tests/mallory/tikv/client-rust-server/: build.rs
tests/mallory/tikv/db-build/: build.sh  install.sh
(+89 files in other folders)
